# smartcar-rust-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: tests.yml
examples/: getting-started-cli.rs  getting-started.rs
src/: auth_client.rs  error.rs  helpers.rs  lib.rs  permission.rs  request.rs  response.rs  smartcar.rs  vehicle.rs  webhooks.rs
src/auth_client/: auth_url_options.rs
src/response/: batch.rs  compatibility.rs  meta.rs
src/smartcar/: auth_client.rs  permission.rs  utils.rs  vehicle.rs
src/smartcar/auth_client/: connect_url_options.rs  options.rs
src/smartcar/utils/: request.rs  response.rs
tests/: e2e.rs  integration_test.rs
tests/helpers/: mod.rs
