[package]
name = "smartcar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"

[dev-dependencies]
fantoccini = "0.19.3"
tokio = "1.19.2"
serial_test = "0.9.0"
