[package]
name = "smartcar"
version = "0.1.4"
edition = "2021"
license = "MIT"
documentation= "https://docs.rs/smartcar/latest/smartcar/"
homepage = "https://github.com/nbry/smartcar-rust-sdk"
repository = "https://github.com/nbry/smartcar-rust-sdk"
description = """
Rust client SDK for the Smartcar API
"""

[dependencies]
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"] }
hmac = "0.12.1"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"

[dev-dependencies]
axum = "0.5.15"
axum-macros = "0.2.3"
fantoccini = "0.19.3"
tokio = "1.19.2"
serial_test = "0.9.0"
